# OrcaSlicer

./: .cursorignore  .gitignore  README.md
.cursor/rules/: readme-badges.mdc
.cursor/rules/ollama/: 01-core-setup.mdc  02-docker-containerization.mdc  03-smolagents-integration.mdc  04-production-deployment.mdc
.cursor/rules/python/smolagents/: 04-web-browsing-pattern.mdc
orca-agents/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SPECS.md  docker-compose.yml  main.py  pyproject.toml
orca-agents/.github/workflows/: ci.yml
orca-agents/app/: __init__.py  config.py  main.py  models.py
orca-agents/app/services/: ollama.py
orca-agents/orca_agents/: config.py  main.py  models.py
orca-agents/orca_agents/agents/: __init__.py  factory.py  orchestrator.py
orca-agents/orca_agents/services/: __init__.py
orca-agents/specs/: agentic_architecture.md  api_endpoints.md  architecture.md  coding_standards.md  database_persistence.md  development_environment.md  production_deployment.md  testing_strategy.md
orca-agents/tests/: __init__.py  test_config.py  test_main.py  test_models.py
orca-agents/tests/agents/: test_factory.py  test_orchestrator.py
orca-agents/tests/services/: test_ollama.py
py-agents/specs/: api_endpoints.md  architecture.md  coding_standards.md
